# hello

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
color-scheme/: CMakeLists.txt  HelloDark.colors  HelloLight.colors  README  README.md
kstyle/: CMakeLists.txt  config-hello.h.cmake  hello.h  hello.json  hello.kcfg  hello.themerc  helloaddeventfilter.cpp  helloaddeventfilter.h  helloblurhelper.cpp  helloblurhelper.h  helloframeshadow.cpp  helloframeshadow.h  hellohelper.cpp  hellohelper.h  hellomdiwindowshadow.cpp  hellomdiwindowshadow.h  hellomnemonics.cpp  hellomnemonics.h  hellopropertynames.cpp  hellopropertynames.h  helloshadowhelper.cpp  helloshadowhelper.h  hellosplitterproxy.cpp  hellosplitterproxy.h  hellostyle.cpp  hellostyle.h  hellostyleconfigdata.kcfgc  hellostyleplugin.cpp  hellostyleplugin.h  hellotileset.cpp  hellotileset.h  hellowindowmanager.cpp  hellowindowmanager.h
kstyle/animations/: breezeanimation.cpp  breezeanimation.h  breezeanimationdata.cpp  breezeanimationdata.h  breezeanimations.cpp  breezeanimations.h  breezebaseengine.cpp  breezebaseengine.h  breezebusyindicatordata.cpp  breezebusyindicatordata.h  breezebusyindicatorengine.cpp  breezebusyindicatorengine.h  breezedatamap.h  breezedialdata.cpp  breezedialdata.h  breezedialengine.cpp  breezedialengine.h  breezeenabledata.cpp  breezeenabledata.h  breezegenericdata.cpp  breezegenericdata.h  breezeheaderviewdata.cpp  breezeheaderviewdata.h  breezeheaderviewengine.cpp  breezeheaderviewengine.h  breezescrollbardata.cpp  breezescrollbardata.h  breezescrollbarengine.cpp  breezescrollbarengine.h  breezespinboxdata.cpp  breezespinboxdata.h  breezespinboxengine.cpp  breezespinboxengine.h  breezestackedwidgetdata.cpp  breezestackedwidgetdata.h  breezestackedwidgetengine.cpp  breezestackedwidgetengine.h  breezetabbardata.cpp  breezetabbardata.h  breezetabbarengine.cpp  (+11 more)
kstyle/config/: CMakeLists.txt  Messages.sh  breezestyleconfig.cpp  breezestyleconfig.desktop  breezestyleconfig.h  breezestyleconfigmodule.cpp  breezestyleconfigmodule.h  main.cpp
kstyle/config/ui/: breezestyleconfig.ui
kstyle/debug/: breezewidgetexplorer.cpp  breezewidgetexplorer.h
kwin-effects/: .gitignore  CMakeLists.txt  README.md  helloconfig.kcfg  hellosettings.kcfg  helloshaders.cpp  helloshaders.h  helloshaders.json
kwin-effects/qt5build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake  install_manifest.txt  prefix.sh
kwin-effects/qt5build/kwin4_effect_helloshaders_autogen/: moc_predefs.h
kwin-effects/qt5build/kwin4_effect_helloshaders_autogen/include/: helloshaders.moc
look-and-feel/: AUTHORS  CMakeLists.txt  README.md  metadata.desktop
plasma-theme/: CMakeLists.txt  README.md  metadata.desktop
plasma-theme/hello dark/: colors  metadata.desktop
plasma-theme/hellodark/: AUTHORS  metadata.desktop
plasma-theme/hellolight/: metadata.desktop
window-decoration/: .gitignore  BreezewayConfig.cmake.in  CMakeLists.txt  HelloConfig.cmake.in  README.md
window-decoration/kdecoration/: CMakeLists.txt  Messages.sh  breezeway.h  breezeway.json  breezewaybutton.cpp  breezewaybutton.h  breezewaydecoration.cpp  breezewaydecoration.h  breezewayexceptionlist.cpp  breezewayexceptionlist.h  breezewaysettings.kcfgc  breezewaysettingsdata.kcfg  breezewaysettingsprovider.cpp  breezewaysettingsprovider.h  breezewaysizegrip.cpp  breezewaysizegrip.h  config-breezeway.h.cmake  config-hello.h.cmake  hello.h  hello.json  hellobutton.cpp  hellobutton.h  hellodecoration.cpp  hellodecoration.h  helloexceptionlist.cpp  helloexceptionlist.h  hellosettings.kcfgc  hellosettingsdata.kcfg  hellosettingsprovider.cpp  hellosettingsprovider.h  hellosizegrip.cpp  hellosizegrip.h
window-decoration/kdecoration/config/: breezewayconfigwidget.cpp  breezewayconfigwidget.h  breezewaydecorationconfig.desktop  breezewaydetectwidget.cpp  breezewaydetectwidget.h  breezewayexceptiondialog.cpp  breezewayexceptiondialog.h  breezewayexceptionlistwidget.cpp  breezewayexceptionlistwidget.h  breezewayexceptionmodel.cpp  breezewayexceptionmodel.h  breezewayitemmodel.cpp  breezewayitemmodel.h  breezewaylistmodel.h  helloconfigwidget.cpp  helloconfigwidget.h  hellodecorationconfig.desktop  hellodetectwidget.cpp  hellodetectwidget.h  helloexceptiondialog.cpp  helloexceptiondialog.h  helloexceptionlistwidget.cpp  helloexceptionlistwidget.h  helloexceptionmodel.cpp  helloexceptionmodel.h  helloitemmodel.cpp  helloitemmodel.h  hellolistmodel.h
window-decoration/kdecoration/config/ui/: about.qrc  breezewayconfigurationui.ui  breezewaydetectwidget.ui  breezewayexceptiondialog.ui  breezewayexceptionlistwidget.ui  helloconfigurationui.ui  hellodetectwidget.ui  helloexceptiondialog.ui  helloexceptionlistwidget.ui
window-decoration/libbreezewaycommon/: CMakeLists.txt  breezewayboxshadowrenderer.cpp  breezewayboxshadowrenderer.h  config-breezewaycommon.h.cmake
window-decoration/libhellocommon/: CMakeLists.txt  config-hellocommon.h.cmake  helloboxshadowrenderer.cpp  helloboxshadowrenderer.h
